--- a/Soffit/about_the_studio.html
+++ b/Soffit/about_the_studio.html
@@ -48,9 +48,9 @@
                       Еще
                     </a>
                     <ul class="dropdown-menu bg-Light" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item " href="#">Отзывы</a></li>
-                      <li><a class="dropdown-item " href="#">Фотографии</a></li>
-                      <li><a class="dropdown-item " href="#">Сценарии</a></li>
+                      <li><a class="dropdown-item " href="reviews.html">Отзывы</a></li>
+                      <li><a class="dropdown-item " href="photos.html">Фотографии</a></li>
+                      <li><a class="dropdown-item " href="scenario.html">Сценарии</a></li>
                     </ul>
                   </li>
                 </ul>
