--- a/Soffit/reviews.html
+++ b/Soffit/reviews.html
@@ -69,20 +69,6 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <div class="testimonialBox">
-              <img src="img/quote.png" alt="quote" class="testimonialBox__quote">
-              <div class="content">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus quod cupiditate maiores nihil quos vitae odit dolorum assumenda. Earum pariatur soluta repellendus distinctio ullam rem laboriosam itaque, magnam error delectus.</p>
-                <div class="testimonialBox__details">
-                  <div class=" testimonialBox__details-imgBx">
-                    <img src="img/teacher1.svg" alt="users">
-                  </div>
-                  <h3>someone Famuse <br><span>Creativ Designer</span></h3>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
             <img src="img/reviews1.png"/>
           </div>
           <div class="swiper-slide">
@@ -98,13 +84,38 @@
             <img src="img/reviews5.png" />
           </div>
           <div class="swiper-slide">
-            <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+            <img src="img/reviews6.jpeg" />
           </div>
           <div class="swiper-slide">
-            <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+            <img src="img/reviews10.jpeg" />
           </div>
           <div class="swiper-slide">
-            <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+            <img src="img/reviews11.jpeg" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/reviews12.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/reviews13.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/reviews14.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/reviews15.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/reviews17.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/reviews18.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/reviews19.png" />
+          </div>
+        
+          <div class="swiper-slide">
+            <img src="img/reviews20.png" />
           </div>
         </div>
         <div class="swiper-pagination"></div>
@@ -134,24 +145,4 @@
     </body>
     </html>
 
-    <!-- <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <div class="testimonialBox">
-            <img src="img/quote.png" alt="quote" class="quote">
-            <div class="content">
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus quod cupiditate maiores nihil quos vitae odit dolorum assumenda. Earum pariatur soluta repellendus distinctio ullam rem laboriosam itaque, magnam error delectus.</p>
-              <div class="details">
-                <div class="imgBx">
-                  <img src="#" alt="users">
-                </div>
-                <h3>someone Famuse <br><span>Creativ Designer</span></h3>
-              </div>
-            </div>
-          </div>
-
-        </div>   swiper-slide -->
-      <!--</div> swiper-wrapper -->
-      <!-- </div> swiper container-->
-    <!-- </div>
-  </div>  <!-- container  -->
+    
