--- a/Soffit/photos.html
+++ b/Soffit/photos.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOFFIT</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -59,5 +64,29 @@
             </div>
           </nav>
     </header>
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide1">Slide 1</div>
+        <div class="swiper-slide1">Slide 2</div>
+        <div class="swiper-slide1">Slide 3</div>
+        <div class="swiper-slide1">Slide 4</div>
+        <div class="swiper-slide1">Slide 5</div>
+        <div class="swiper-slide1">Slide 6</div>
+        <div class="swiper-slide1">Slide 7</div>
+        <div class="swiper-slide1">Slide 8</div>
+        <div class="swiper-slide1">Slide 9</div>
+      </div>
+    </div>
+
+    
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+   
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        effect: "cards",
+        grabCursor: true,
+      });
+    </script>
     </body>
     </html>
